changed stopwatch icon and fixed alignments problems with stat header

--- a/frontend/src/styles/components/songDetail.css
+++ b/frontend/src/styles/components/songDetail.css
@@ -12,32 +12,33 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	margin: 30px 0px;
+	margin: 20px 0px;
 }
 
 .basicInfoHeader__title{
 	font-size: 2.5rem;
 	margin: 10px 0px;
-	padding: 0px 16px;
 }
 
 .basicInfoHeader__artist{
 	color: #e5f9f9d9;
-	padding: 0px 16px;
-}
-
-.rank {
-	margin: 10px 0px;
+	padding-bottom: 10px;
 }
 
 .rank__number{
-	padding: 10px;
 	font-size: 2.5rem;
 }
 
 .durationDetail__number{
-	color: #9aabb3d9;
-	padding: 10px;
+	color: #9aabb3d9;	
+}
+
+.otherInfoHeader{
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	align-items: center;
+	justify-items: center;
+	grid-gap: 4px;
 }
 
 .line{
